# derbyvote

./: .gitignore  CMakeLists.txt  DEVELOPING.md  LICENSE  MANUAL.md  README.md  go.mod  go.sum
.github/workflows/: build.yml
cmd/derbyvote/: keyboard_darwin.go  keyboard_unix.go  keyboard_windows.go  main.go
internal/app/: app.go  app_test.go
internal/auth/: auth.go  auth_test.go
internal/browser/: browser.go  browser_test.go
internal/errors/: errors.go  errors_test.go
internal/handlers/: admin.go  admin_test.go  auth.go  auth_test.go  car_test.go  handler_edge_test.go  handlers.go  handlers_test.go  http.go  http_test.go  requests.go  responses.go  routes.go  template_test.go  vote.go  vote_test.go
internal/logger/: logger.go  logger_test.go
internal/models/: models.go
internal/repository/: errors.go  interfaces.go  repository_test.go  sqlite.go  sqlite_mock_test.go
internal/repository/mock/: repository.go
internal/services/: car.go  car_test.go  category.go  category_test.go  errors.go  errors_test.go  integration_test.go  interfaces.go  results.go  results_test.go  settings.go  settings_test.go  voter.go  voter_test.go  voting.go  voting_test.go
internal/testutil/: testutil.go
internal/websocket/: websocket.go  websocket_test.go
pkg/derbynet/: derbynet.go  derbynet_test.go  mock.go
web/: web.go  web_test.go
web/static/css/: admin.css
web/static/js/: admin.js  cars.js  categories.js  common.js  dashboard.js  results.js  settings.js  utils.js  voters.js
web/templates/: index.html
web/templates/admin/: cars.html  categories.html  dashboard.html  layout.html  login.html  results.html  settings.html  voters.html
web/templates/voter/: vote.html
